# fb_group_scraper

./: .pre-commit-config.yaml  README.md  enums.py  group_filter.py  main.py  normalization.py  pyproject.toml
fb_scrape_lib/: __init__.py  advanced_scrape.py  mutual.py  scrape_about.py
tests/: fb_scrape_lib_test.py  filter_test.py  link_normalization_test.py
tests/example_groups/: cheapmealideas.html  cheapmealideas.json  cheapmealideas_featured.html  cheapmealideas_featured.json  cheapmealideas_topics.html  cheapmealideas_topics.json  makeupartistsgroup.html  makeupartistsgroup.json  makeupartistsgroup_admin.html  makeupartistsgroup_admin.json
